--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>com.luisromero.qagms</groupId>
   <artifactId>chess-java</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <sonar.organization>luisromero19</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
   <dependencies>
   	<dependency>
     	<groupId>com.luisromero.qagms</groupId>
